--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
-/* 基本の設定
+/* 基本の設定 文章だけｈねんｋ変更
+
  -------------------------------------------- */
 body {
 	font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
